--- a/requirements.txt
+++ b/requirements.txt
@@ -409,3 +409,8 @@ zipp==3.17.0
 zope.interface==5.4.0
 zstandard==0.22.0
 -ympy==1.13.1
+pandas==2.2.2
+streamlit==1.32.0
+gspread==6.1.4
+oauth2client==4.1.3
+python-dotenv==0.21.0
