--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ streamlit==1.32.0
 gspread==6.1.4
 oauth2client==4.1.3
 python-dotenv==0.21.0
-sympy==1.13.1  # Corrected line (if applicable)
+sympy==1.13.1
+plotly==5.20.0  # Ensure compatibility
+numpy==1.26.4   # Latest stable version
+
